<resources>
    <string name="app_name">TxMail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="smtp_label_section_title">SMTP settings</string>
    <string name="smtp_label_host">Host</string>
    <string name="smtp_label_port">Port</string>
    <string name="smtp_label_user">Username</string>
    <string name="smtp_label_pass">Password</string>
    <string name="smtp_check_auth">Use authentication</string>
    <string name="smtp_check_ssl">Use SSL</string>

    <string name="status_label_section_title">Status</string>
    <string name="status_toggle_sync">Toggle sync</string>

    <string name="mail_label_section_title">Mail settings</string>
    <string name="mail_label_from">From</string>
    <string name="mail_label_to">To</string>
    <string name="mail_label_subject">Subject</string>
    <string name="mail_label_body">Body</string>

    <string name="mail_text_default_from">TxMail</string>
    <string name="mail_text_default_subject_format">TxMail: New SMS from %a</string>
    <string name="mail_text_default_body_format">SMS body:\n%b</string>
</resources>
